# gtk-crusader-village

./: .gitmodules  README.md  TODO.md  am.kolunmi.GtkCrusaderVillage.json  make-sourcehold-install.sh  make-sourcehold-venv.sh  meson.build  setup_msys2_deps_and_sourcehold.bat
.github/workflows/: build-release.yml
data/: am.kolunmi.GtkCrusaderVillage.desktop.in  am.kolunmi.GtkCrusaderVillage.gschema.xml  am.kolunmi.GtkCrusaderVillage.gschema.xml.in  am.kolunmi.GtkCrusaderVillage.metainfo.xml.in  am.kolunmi.GtkCrusaderVillage.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: gtk-crusader-village-application.c  gtk-crusader-village-application.h  gtk-crusader-village-brush-area-item.c  gtk-crusader-village-brush-area-item.h  gtk-crusader-village-brush-area-item.ui  gtk-crusader-village-brush-area.c  gtk-crusader-village-brush-area.h  gtk-crusader-village-brush-area.ui  gtk-crusader-village-brushable.c  gtk-crusader-village-brushable.h  gtk-crusader-village-dialog-window.c  gtk-crusader-village-dialog-window.h  gtk-crusader-village-dialog-window.ui  gtk-crusader-village-image-mask-brush.c  gtk-crusader-village-image-mask-brush.h  gtk-crusader-village-item-area-item.c  gtk-crusader-village-item-area-item.h  gtk-crusader-village-item-area-item.ui  gtk-crusader-village-item-area.c  gtk-crusader-village-item-area.h  gtk-crusader-village-item-area.ui  gtk-crusader-village-item-store.c  gtk-crusader-village-item-store.h  gtk-crusader-village-item-stroke.c  gtk-crusader-village-item-stroke.h  gtk-crusader-village-item.c  gtk-crusader-village-item.h  gtk-crusader-village-map-editor-overlay.c  gtk-crusader-village-map-editor-overlay.h  gtk-crusader-village-map-editor-overlay.ui  gtk-crusader-village-map-editor-status.c  gtk-crusader-village-map-editor-status.h  gtk-crusader-village-map-editor-status.ui  gtk-crusader-village-map-editor.c  gtk-crusader-village-map-editor.h  gtk-crusader-village-map-editor.ui  gtk-crusader-village-map-handle.c  gtk-crusader-village-map-handle.h  gtk-crusader-village-map.c  gtk-crusader-village-map.h  (+22 more)
src/gtk/: shc-dark.css  shc-light.css  styles.css
src/items/: AmorersWorkshop.variant  Apothecary.variant  AppleOrchard.variant  ArabArcher.variant  ArabAssassin.variant  ArabFireThrower.variant  ArabHorseArcher.variant  ArabSlave.variant  ArabSlinger.variant  ArabSwordsman.variant  ArmorersWorkshop.variant  Armory.variant  ArmourersWorkshop.variant  Armoury.variant  Bakery.variant  Ballista.variant  Barracks.variant  BatteringRam.variant  BlacksmithsWorkshop.variant  Brazier.variant  Brewery.variant  Burningstake.variant  CagedWarDogs.variant  Catapult.variant  Cathedral.variant  Cesspit.variant  Chapel.variant  ChoppingBlock.variant  Church.variant  CommunalGarden.variant  CrenulatedWall.variant  DairyFarm.variant  DancingBear.variant  DogCage.variant  Drawbridge.variant  Dungeon.variant  DunkingStool.variant  Engineer.variant  EngineerWithOil.variant  EngineersGuild.variant  (+79 more)
